add meta and content

--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Braiton's Website</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Braiton Mendoza's personal web site at SHSU">
+    <meta name="keywords" content="Mendoza, Braiton, MIS SHSU">
+    <title>Braiton Mendoza's Website</title>
 </head>
 
 <body>
     <h1> Welcome to my web site!</h1>
+    <h2> Enjoy the emptiness while it lasts... </h2>
 </body>
 </html>
