--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Braiton Mendoza's personal web site at SHSU">
-    <meta name="keywords" content="Mendoza, Braiton, MIS SHSU">
+    <meta name="keywords" content="Mendoza, Braiton, MIS, SHSU">
     <title>Braiton Mendoza's Website</title>
 </head>
 
 <body>
-    <h1> Welcome to my web site!</h1>
-    <h2> Enjoy the emptiness while it lasts... </h2>
+    <header> 
+        <img src="images/donut.png" alt="My Picture" height="100" width="100">
+
+    </header>
 </body>
 </html>
