--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 <body>
     <header> 
         <img src="images/donut.png" alt="My Picture" height="100" width="100">
-
     </header>
+    <main> 
+    <h1>Welcome to my Website!</h1>
+    <h2>https://bm2963.github.io/</h2>
+    </main>
 </body>
 </html>
