--- a/index.html
+++ b/index.html
@@ -14,9 +14,18 @@
         <img src="images/donut.png" alt="My Picture" height="100" width="100">
     </header>
     <main> 
-    <h1>Welcome to my Website!</h1>
-    <h2>https://bm2963.github.io/</h2>
-    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet praesentium, rerum quia magnam sapiente repudiandae magni temporibus cumque laboriosam veritatis.</h3>
+        <h1>Welcome to my Website!</h1>
+        <h2>https://bm2963.github.io/</h2>
+        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet praesentium, rerum quia magnam sapiente repudiandae magni temporibus cumque laboriosam veritatis.</h3>
+        <nav>
+            <ul>
+                <li>Education</li>
+                <li>Work Experience</li>
+                <li>Knowledge and Skills</li>
+                <li>Certifications</li>
+                <li>Class Project</li>
+            </ul>
+        </nav>
     </main>
 </body>
 </html>
