--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li>Work Experience</li>
                 <li>Knowledge and Skills</li>
                 <li>Certifications</li>
-                <li><a href=" " Class Project></a></li>
+                <li><a href="Class Project"></a></li>
             </ul>
         </nav>
     </main>
