--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <li><a href="#">Class Projects </a></li>
             </ul>
         </nav>
+        <p>Click here to download <a href="Files/braitonmendoza_exam1.docx">my resume</a></p>
     </main>
 </body>
 </html>
