--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
                 <li><a href="#">Class Projects </a></li>
             </ul>
         </nav>
-        <p>Click here to download <a href="Files/braitonmendoza_exam1.docx">my resume</a></p>
+        <p>Click here to download <a href="Files/braitonmendoza_exam1.docx">My Resume</a></p>
+        <p>Click here to visit my <a href="https://www.linkedin.com/in/braitonrmendoza/" > LinkedIn profile</a></p>
     </main>
 </body>
 </html>
