--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header> 
-        <img src="images/donut.png" alt="My Picture" height="100" width="100">
+        <img src="images/Profile picture.jpg" alt="My Picture" height="100" width="100">
     </header>
     <main> 
         <h1>Welcome to my Website!</h1>
