links and copyright

--- a/index.html
+++ b/index.html
@@ -30,5 +30,10 @@
         <p>Click here to visit my <a href="https://www.linkedin.com/in/braitonrmendoza/" > LinkedIn profile</a></p>
         <p>Please contact me at <em><a href="mailto:brm076@shsu.edu"> brm076@shsu.edu</a> </em> for any inquiries.</p>
     </main>
+    <br>
+    <hr>
+    <p>&copy; 2025 Braiton Mendoza</p>
+
+
 </body>
 </html>
