--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
     </main>
     <br>
     <hr>
-    <p>&copy; 2025 Braiton Mendoza</p>
-
+    <footer>
+        <p>&copy; 2025 Braiton Mendoza</p>
+    </footer>
 
 </body>
 </html>
