--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <br>
     <hr>
     <footer>
-        <p>&copy; 2025 Braiton Mendoza</p>
+        <p>&copy;CopyRight 2025 Braiton Mendoza</p>
     </footer>
 
 </body>
