new tab addition

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </ul>
         </nav>
         <p>Click here to download <a href="Files/braitonmendoza_exam1.docx">My Resume</a></p>
-        <p>Click here to visit my <a href="https://www.linkedin.com/in/braitonrmendoza/" > LinkedIn profile</a></p>
+        <p>Click here to visit my <a href="https://www.linkedin.com/in/braitonrmendoza/" target="_blank"> LinkedIn profile</a></p>
         <p>Please contact me at <em><a href="mailto:brm076@shsu.edu"> brm076@shsu.edu</a> </em> for any inquiries.</p>
     </main>
     <br>
