--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
     <meta name="description" content="Braiton Mendoza's personal web site at SHSU">
     <meta name="keywords" content="Mendoza, Braiton, MIS, SHSU">
     <title>Braiton Mendoza's Website</title>
+    <link rel="stylesheet" href="Styles/main.css">
 </head>
 
 <body>
     <header> 
         <img src="images/Profile_picture.jpg" alt="My Picture" height="100" width="100">
+        <h1 class="shadow"> Welcome to my Website!</h1>
+        <h2 class="shadow"> https://bm2963.github.io/</h2>
     </header>
     <main> 
-        <h1>Welcome to my Website!</h1>
-        <h2>https://bm2963.github.io/</h2>
+        
         <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet praesentium, rerum quia magnam sapiente repudiandae magni temporibus cumque laboriosam veritatis.</h3>
         <nav>
             <ul>
