--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         
         <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet praesentium, rerum quia magnam sapiente repudiandae magni temporibus cumque laboriosam veritatis.</h3>
         <nav>
-            <ul id="list"></ul>
+            <ul id="list">
                 <li>Education</li>
                 <li>Work Experience</li>
                 <li>Knowledge and Skills</li>
