--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Braiton Mendoza's personal web site at SHSU">
     <meta name="keywords" content="Mendoza, Braiton, MIS, SHSU">
     <title>Braiton Mendoza's Website</title>
-    <link rel="stylesheet" href="Styles/main.css">
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body>
@@ -34,8 +34,8 @@
     </main>
     <br>
     <hr>
-    <footer>
-        <p>&copy; CopyRight 2025 Braiton Mendoza</p>
+    <footer>        
+        <p class="copyright">&copy; CopyRight 2025 Braiton Mendoza</p>
     </footer>
 
 </body>
