--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
                 <li><a href="#">Class Projects </a></li>
             </ul>
         </nav>
-        <p>Click here to download <a href="Files/Placeholder_Resume.docx" target="_blank">My Resume</a></p>
-        <p>Click here to visit my <a href="https://www.linkedin.com/in/braitonrmendoza/" target="_blank"> LinkedIn profile</a></p>
-        <p>Please contact me at <em><a href="mailto:brm076@shsu.edu"> brm076@shsu.edu</a> </em> for any inquiries.</p>
+        <div>
+            <p>Click here to download <a href="Files/Placeholder_Resume.docx" target="_blank">My Resume</a></p>
+            <p>Click here to visit my <a href="https://www.linkedin.com/in/braitonrmendoza/" target="_blank"> LinkedIn profile</a></p>
+            <p>Please contact me at <em><a href="mailto:brm076@shsu.edu"> brm076@shsu.edu</a> </em> for any inquiries.</p>
+        </div>
     </main>
     <br>
     <hr>
