--- a/project.html
+++ b/project.html
@@ -24,6 +24,14 @@
     <aside>
         <h4>References</h4>
         <o1>
-            
+            <li><a href="https://validator.w3.org/">W3Schools</a></li>
+            <li><a href="https://jigsaw.w3.org/css-validator/">W3-CSS-Validator</a></li>
+            <li><a href="https://learn.microsoft.com/en-us/training/paths/build-web-pages-html-css-for-beginners/">HTML MS Learn</a></li>
         </o1>
     </aside>
+    <footer>        
+        <p class="copyright">&copy; CopyRight 2025 Braiton Mendoza</p>
+    </footer>
+
+</body>
+</html>   
