--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Braiton Mendoza's personal web site at SHSU">
     <meta name="keywords" content="Mendoza, Braiton, MIS, SHSU">
     <title>Braiton Mendoza's Website</title>
-    <link rel="stylesheet" href="styles/project.css">
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body>
