--- a/project.html
+++ b/project.html
@@ -32,6 +32,6 @@
     <footer>        
         <p class="copyright">&copy; CopyRight 2025 Braiton Mendoza</p>
     </footer>
-
+    <p class="fixed">Please contact me at <em><a href="mailto:brm076@shsu.edu"> brm076@shsu.edu</a> </em> for any inquiries.</p>
 </body>
 </html>   
