--- a/GSS.html
+++ b/GSS.html
@@ -14,11 +14,11 @@
     <header> 
         <img src="images/Profile_picture.jpg" alt="My Picture" height="100" width="100">
         <h1 class="shadow"> Welcome to my Website!</h1>
-        <h2 class="shadow"> https://bm2963.github.io/</h2>
+        <h2 class="shadow"> https://bm2963.github.io/GSS.html</h2>
     </header>
     <main> 
         
-        <h3>Welcome to my website! My name is braiton Mendoza, a Senior at SHSU who is expected to be in the May 2025 graduating class.
+        <h3>Welcome to my website! My name is braiton Mendoza, a Senior at SHSU who is expected to be apart of the May 2025 graduating class.
             Below you will see that this page offers some additional links to my current resume, my GSS Award Essay submission and my LinkedLn profile page.
             Please feel free to explore these items and to reach out to me via email with any questions.
             Thank you and welcome!
