--- a/GSS.html
+++ b/GSS.html
@@ -23,6 +23,16 @@
             Please feel free to explore these items and to reach out to me via email with any questions.
             Thank you and welcome!
         </h3>
+        <nav>
+            <h4>Below are are my qualifiying details per the requirements for this award:</h4>
+            <ul id="list">
+                <li>Majoring in MIS</li>
+                <li>Senior in the 2025 graduating class</li>
+                <li>2.85 Cumulative GPA</li>
+                <li>154 hours of applied credit hours</li>
+                <li><a href="#">Class Projects </a></li>
+            </ul>
+        </nav>
         <div>
             <p>Click here to download <a href="Files/Resume_Braiton.Mendoza-copy.pdf" target="_blank">My Resume</a></p>
             <p>Click here to download <a href="Files/Braiton Mendoza GSS Essay.pdf" target="_blank">My GSS Award Essay</a></p>
