--- a/GSS.html
+++ b/GSS.html
@@ -26,7 +26,7 @@
         <nav>
             <h4>Below are are my qualifiying details per the requirements for this award:</h4>
             <ul id="list">
-                <li>Majoring in MIS</li>
+                <li>Pursuing Mgmt Information Systems, BBA</li>
                 <li>Senior in the 2025 graduating class</li>
                 <li>2.85 Cumulative GPA</li>
                 <li>154 hours of applied credit hours</li>
