--- a/GSS.html
+++ b/GSS.html
@@ -28,7 +28,7 @@
             <ul id="list">
                 <li>Pursuing Mgmt Information Systems, BBA</li>
                 <li>Senior in the 2025 graduating class</li>
-                <li>2.85 Cumulative GPA</li>
+                <li>2.85 Cumulative GPA/3.13 SHSU GPA</li>
                 <li>154 hours of applied credit hours</li>
             </ul>
         </nav>
