--- a/GSS.html
+++ b/GSS.html
@@ -34,8 +34,8 @@
             </ul>
         </nav>
         <div>
-            <p>Click here to download <a href="Files/Resume_Braiton.Mendoza-copy.pdf" target="_blank">My Resume</a></p>
-            <p>Click here to download <a href="Files/Braiton Mendoza GSS Essay.pdf" target="_blank">My GSS Award Essay</a></p>
+            <p>Click here to view/download <a href="Files/Resume_Braiton.Mendoza-copy.pdf" target="_blank">My Resume</a></p>
+            <p>Click here to view/download <a href="Files/Braiton Mendoza GSS Essay.pdf" target="_blank">My GSS Award Essay</a></p>
             <p>Click here to visit my <a href="https://www.linkedin.com/in/braitonrmendoza/" target="_blank"> LinkedIn profile</a></p>
             <p>Please contact me at <em><a href="mailto:brm076@shsu.edu"> brm076@shsu.edu</a> </em> for any inquiries.</p>
         </div>
