--- a/GSS.html
+++ b/GSS.html
@@ -24,7 +24,7 @@
             Thank you and welcome!
         </h3>
         <nav>
-            <h4>Below are are my qualifiying details per the requirements for this award:</h4>
+            <h4>Below are my qualifiying details per the requirements for this award:</h4>
             <ul id="list">
                 <li>Pursuing Mgmt Information Systems, BBA</li>
                 <li>Senior in the 2025 graduating class</li>
