--- a/GSS.html
+++ b/GSS.html
@@ -18,10 +18,14 @@
     </header>
     <main> 
         
-        <h3>Welcome to my website! My name is Braiton Mendoza, a senior at SHSU who is expected to be apart of the May 2025 graduating class.
+        <h3>
+            <p>Welcome to my website!</p> 
+            <p>
+            My name is Braiton Mendoza, a senior at SHSU who is expected to be apart of the May 2025 graduating class.
             Below you will see that this page offers some url links to my current resume, my GSS Award Essay submission and my Linkedin profile page.
             Please feel free to explore these items and to reach out to me via email with any questions.
             Thank you and welcome!
+            </p>
         </h3>
         <nav>
             <h4>Below are my qualifiying details per the requirements for this award:</h4>
