--- a/andrew.html
+++ b/andrew.html
@@ -41,7 +41,7 @@
             <p>Click here to view/download <a href="https://www.wendys.com/" target="_blank">My other secret place</a></p>
             <p>Click here to view/download <a href="https://www.farmersonly.com/" target="_blank">My secret place</a></p>
             <p>Click here to visit my <a href="https://www.linkedin.com/in/andrewlitzner/" target="_blank"> LinkedIn profile</a></p>
-            <p>Please contact me at <em><a href="andrewsemail@yahoo.com"> brm076@shsu.edu</a> </em> for any inquiries.</p>
+            <p>Please contact me at <em><a href="andrewsemail@yahoo.com"> andrewsemail@yahoo.com</a> </em> for any inquiries.</p>
         </div>
     </main>
     <br>
