--- a/andrew.html
+++ b/andrew.html
@@ -33,7 +33,7 @@
                 <li>6 foot 5</li>
                 <li>former navy seal with a background in badassery</li>
                 <li>Kitten player</li>
-                <li>stuart little's biggest fan</li>
+                <li>stuart little'ss biggest fan</li>
                 <li>i like bacon</li>
             </ul>
         </nav>
