--- a/andrew.html
+++ b/andrew.html
@@ -12,7 +12,7 @@
 
 <body>
     <header> 
-        <img src="images/catz.jpg" alt="My Picture" height="100" width="100">
+        <img src="images/neoncat.gif" alt="My Picture" height="100" width="100">
         <h1 class="shadow"> Welcome to my Website!</h1>
         <h2 class="shadow"> https://bm2963.github.io/andrew.html</h2>
     </header>
