--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="project.html">Project</a></li>
-            <li><a href="menu.html" class="current"></a>Menu</li>
+            <li><a href="menu.html" class="current">Menu</a></li>
             <li><a href="#" class="lastitem">About Us</a></li>
         </ul>
     </nav>
