--- a/menu.html
+++ b/menu.html
@@ -34,9 +34,9 @@
         <ol>
             <li><a href="#introduction">Introduction</a></li>
             <li><a href="#background">Background</a></li>
-            <li><a href="#Method">Method</a></li>
-            <li><a href="#analysis">Analysis</a></li>
-            <li><a href="#results">Results</a></li>
+            <li><a href="#method">Method</a></li>
+                <li><a href="#analysis">Analysis</a></li>
+                <li><a href="#results">Results</a></li>
             <li><a href="#discussions">Discussions</a></li>
         </ol>
     </aside>
