--- a/menu.html
+++ b/menu.html
@@ -42,6 +42,7 @@
                 </ul>  
             <li><a href="#discussions">Discussions</a></li>
         </ol>
+        <a href="#top">Go to the top of the page</a>
     </aside>
 </body>
 </html>
