--- a/exam.html
+++ b/exam.html
@@ -49,7 +49,7 @@
                         </ol>
                     <li><a href="#results">Results</a></li>
                 </ul>
-            <li><a href="#discussions">Discussions</a></li>
+            <li><a href="#discussion">Discussions</a></li>
         </ol>
         <a href="#top">Go to the top of the page</a>
     </aside>
