--- a/exam.html
+++ b/exam.html
@@ -55,6 +55,7 @@
     </aside>
     <footer>        
         <p class="copyright">&copy; CopyRight 2025 Braiton Mendoza</p>
+        <p>Click here to visit my <a href="https://www.linkedin.com/in/braitonrmendoza/" target="_blank"> LinkedIn profile</a></p>
     </footer>
     <p class="fixed">Please contact me at <em><a href="mailto:brm076@shsu.edu"> brm076@shsu.edu</a> </em> for any inquiries.</p>
 </body>
