--- a/exam.html
+++ b/exam.html
@@ -54,7 +54,7 @@
         <a href="#top">Go to the top of the page</a>
     </aside>
     <footer>        
-        <p class="copyright">&copy; CopyRight 2025 Braiton Mendoza>|<a href="https://www.linkedin.com/in/braitonrmendoza/" target="_blank"> LinkedIn profile</a></p>
+        <p class="copyright">&copy; CopyRight 2025 Braiton Mendoza | <a href="https://www.linkedin.com/in/braitonrmendoza/" target="_blank"> LinkedIn profile</a></p>
     </footer>
     <p class="fixed">Please contact me at <em><a href="mailto:brm076@shsu.edu"> brm076@shsu.edu</a> </em> for any inquiries.</p>
 </body>
