--- a/exam.html
+++ b/exam.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    
     <nav id="nav_menu">
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -19,6 +20,8 @@
             <li><a href="#" class="lastitem">About Us</a></li>
         </ul>
     </nav>
+    <header> 
+    </header>
     <article>
         <h1>Research Project B</h1>
         <h2 id="introduction">Introduction</h2>
