--- a/test.html
+++ b/test.html
@@ -17,38 +17,44 @@
             color: white;
             text-align: center;
             padding: 1em 0;
+            position: relative;
+            overflow: hidden;
         }
-        nav {
+        header h1 {
+            margin: 0;
+            position: relative;
+            z-index: 1;
+        }
+        .moving-images {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
             display: flex;
-            justify-content: center;
-            background-color: #333;
+            justify-content: space-around;
+            align-items: center;
+            z-index: 0;
+            animation: move 10s linear infinite;
         }
-        nav a {
-            color: white;
-            padding: 1em;
-            text-decoration: none;
+        .moving-images img {
+            width: 50px;
+            height: auto;
         }
-        nav a:hover {
-            background-color: #575757;
-        }
-        main {
-            padding: 2em;
-            text-align: center;
-        }
-        section {
-            margin: 2em 0;
-        }
-        footer {
-            text-align: center;
-            padding: 1em 0;
-            background-color: #333;
-            color: white;
+        @keyframes move {
+            0% { transform: translateX(100%); }
+            100% { transform: translateX(-100%); }
         }
     </style>
 </head>
 <body>
     <header>
         <h1>Welcome to My Nice Website</h1>
+        <div class="moving-images">
+            <img src="https://via.placeholder.com/50" alt="Image 1">
+            <img src="https://via.placeholder.com/50" alt="Image 2">
+            <img src="https://via.placeholder.com/50" alt="Image 3">
+        </div>
     </header>
     <nav>
         <a href="#home">Home</a>
