--- a/quiz7.html
+++ b/quiz7.html
@@ -68,7 +68,7 @@
         <table class="third">
             <thead>
                 <tr>
-                    <th colspan="3">TABLE 3: IT Jobs and Salary</th>
+                    <th colspan="3">TABLE 3: new IT Jobs and Salary</th>
                 </tr>
                 <tr>
                     <th>Category</th>
