--- a/project/webpages/homepage.html
+++ b/project/webpages/homepage.html
@@ -1,1 +1,16 @@
-asd
+.logo {
+    position: absolute;
+    left: 20px;
+    height: 50px;
+    width: auto;
+  }
+  
+  .logo img {
+    height: 50px;
+    width: auto;
+    transition: transform 0.3s ease-in-out;
+  }
+  
+  .logo img:hover {
+    transform: scale(1.1);
+  }
