--- a/project/webpages/homepage.html
+++ b/project/webpages/homepage.html
@@ -1,16 +1,44 @@
-.logo {
-    position: absolute;
-    left: 20px;
-    height: 50px;
-    width: auto;
-  }
-  
-  .logo img {
-    height: 50px;
-    width: auto;
-    transition: transform 0.3s ease-in-out;
-  }
-  
-  .logo img:hover {
-    transform: scale(1.1);
-  }
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ITSA Official Webpage</title>
+    <link rel="stylesheet" href="homepage.css">
+</head>
+<body>
+   <header>
+    <h1>Sam Houston State University</h1>
+    <h2>Official page for the ITSA</h2>
+       <div class="header-container">
+     <a href="https://www.shsu.edu/" target="_blank">
+    <img src="logo.png" alt="Website Logo" class="logo">
+    </div>
+  </header>
+   
+
+ <nav>
+  <a href="#">Home</a>
+  <a href="#">About</a>
+  <a href="#">Services</a>
+  <a href="#">Contact</a>
+  <a href="#officers">ITSA Officers</a>
+  <a href="#meetings">Meetings Information</a>
+<a href="#officers">Image Gallery</a>
+    </nav>
+
+  <section class="hero">
+    <h1>Welcome to the ITSA</h1>
+  </section>
+
+  <section class="content">
+    <h2>About This Site</h2>
+    <p>This is a simple homepage built with HTML and CSS. You can customize it however you like. Add more sections, tweak the layout, or connect it with a backend for dynamic content.</p>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 My Website. All rights reserved.</p>
+  </footer>
+
+</body>
+</html>
