--- a/project/webpages/homepage.html
+++ b/project/webpages/homepage.html
@@ -12,7 +12,7 @@
     <h2>Official page for the ITSA</h2>
        <div class="header-container">
      <a href="https://www.shsu.edu/" target="_blank">
-    <img src="logo.png" alt="Website Logo" class="logo">
+    <img src="project/images/SH_orange.png" alt="Website Logo" class="logo">
     </div>
   </header>
    
