--- a/project/webpages/homepage.html
+++ b/project/webpages/homepage.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ITSA Official Webpage</title>
-    <link rel="stylesheet" href="project/styles/homepage.css">
+    <link rel="stylesheet" href="/project/styles/homepage.css">
 </head>
 <body>
    <header>
@@ -12,7 +12,7 @@
     <h2>Official page for the ITSA</h2>
        <div class="header-container">
      <a href="https://www.shsu.edu/" target="_blank">
-    <img src="project/images/SH_orange.png" alt="Website Logo" class="logo">
+    <img src="/project/images/SH_orange.png" alt="Website Logo" class="logo">
     </div>
   </header>
    
