--- a/project/webpages/homepage.html
+++ b/project/webpages/homepage.html
@@ -35,26 +35,26 @@
     <h2>About This Site</h2>
     <p>This is a simple homepage built with HTML and CSS. You can customize it however you like. Add more sections, tweak the layout, or connect it with a backend for dynamic content.</p>
   </section>
-  <section1 class="content">
+  <section class="content">
     <h2>About This Site</h2>
     <p>This is a simple homepage built with HTML and CSS. You can customize it however you like. Add more sections, tweak the layout, or connect it with a backend for dynamic content.</p>
-  </section1>
-  <section2 class="content">
+  </section>
+  <section class="content">
     <h2>About This Site</h2>
     <p>This is a simple homepage built with HTML and CSS. You can customize it however you like. Add more sections, tweak the layout, or connect it with a backend for dynamic content.</p>
-  </section2>
-  <section3 class="content">
+  </section>
+  <section class="content">
     <h2>About This Site</h2>
     <p>This is a simple homepage built with HTML and CSS. You can customize it however you like. Add more sections, tweak the layout, or connect it with a backend for dynamic content.</p>
-  </section3>
-  <section4 class="content">
+  </section>
+  <section class="content">
     <h2>About This Site</h2>
     <p>This is a simple homepage built with HTML and CSS. You can customize it however you like. Add more sections, tweak the layout, or connect it with a backend for dynamic content.</p>
-  </section4>
-  <section5 class="content">
+  </section>
+  <section class="content">
     <h2>About This Site</h2>
     <p>This is a simple homepage built with HTML and CSS. You can customize it however you like. Add more sections, tweak the layout, or connect it with a backend for dynamic content.</p>
-  </section5>
+  </section>
 
   <footer>
     <p>&copy; 2025 My Website. All rights reserved.</p>
