--- a/project/webpages/homepage.html
+++ b/project/webpages/homepage.html
@@ -31,30 +31,42 @@
     <h1>Welcome to the ITSA</h1>
   </section>
 
-  <section class="content">
-    <h2>About This Site</h2>
-    <p>This is a simple homepage built with HTML and CSS. You can customize it however you like. Add more sections, tweak the layout, or connect it with a backend for dynamic content.</p>
-  </section>
-  <section class="content">
-    <h2>About This Site</h2>
-    <p>This is a simple homepage built with HTML and CSS. You can customize it however you like. Add more sections, tweak the layout, or connect it with a backend for dynamic content.</p>
-  </section>
-  <section class="content">
-    <h2>About This Site</h2>
-    <p>This is a simple homepage built with HTML and CSS. You can customize it however you like. Add more sections, tweak the layout, or connect it with a backend for dynamic content.</p>
-  </section>
-  <section class="content">
-    <h2>About This Site</h2>
-    <p>This is a simple homepage built with HTML and CSS. You can customize it however you like. Add more sections, tweak the layout, or connect it with a backend for dynamic content.</p>
-  </section>
-  <section class="content">
-    <h2>About This Site</h2>
-    <p>This is a simple homepage built with HTML and CSS. You can customize it however you like. Add more sections, tweak the layout, or connect it with a backend for dynamic content.</p>
-  </section>
-  <section class="content">
-    <h2>About This Site</h2>
-    <p>This is a simple homepage built with HTML and CSS. You can customize it however you like. Add more sections, tweak the layout, or connect it with a backend for dynamic content.</p>
-  </section>
+  <div>
+    <section class="content">
+      <h2>About This Site</h2>
+      <p>This is a simple homepage built with HTML and CSS. You can customize it however you like. Add more sections, tweak the layout, or connect it with a backend for dynamic content.</p>
+    </section>
+  </div>
+  <div>
+    <section class="content">
+      <h2>About This Site</h2>
+      <p>This is a simple homepage built with HTML and CSS. You can customize it however you like. Add more sections, tweak the layout, or connect it with a backend for dynamic content.</p>
+    </section>
+  </div>
+  <div>
+    <section class="content">
+      <h2>About This Site</h2>
+      <p>This is a simple homepage built with HTML and CSS. You can customize it however you like. Add more sections, tweak the layout, or connect it with a backend for dynamic content.</p>
+    </section>
+  </div>
+  <div>
+    <section class="content">
+      <h2>About This Site</h2>
+      <p>This is a simple homepage built with HTML and CSS. You can customize it however you like. Add more sections, tweak the layout, or connect it with a backend for dynamic content.</p>
+    </section>
+  </div>
+  <div>
+    <section class="content">
+      <h2>About This Site</h2>
+      <p>This is a simple homepage built with HTML and CSS. You can customize it however you like. Add more sections, tweak the layout, or connect it with a backend for dynamic content.</p>
+    </section>
+  </div>
+  <div>
+    <section class="content">
+      <h2>About This Site</h2>
+      <p>This is a simple homepage built with HTML and CSS. You can customize it however you like. Add more sections, tweak the layout, or connect it with a backend for dynamic content.</p>
+    </section>
+  </div>
 
   <footer>
     <p>&copy; 2025 My Website. All rights reserved.</p>
