--- a/project/webpages/homepage.html
+++ b/project/webpages/homepage.html
@@ -69,7 +69,7 @@
   </div>
 
   <footer>
-    <p>&copy; 2025 My Website. All rights reserved.</p>
+    <p>&copy; 2025 ITSA | Sam Houston State University. All rights reserved.</p>
   </footer>
 
 </body>
