--- a/project/webpages/homepage.html
+++ b/project/webpages/homepage.html
@@ -16,15 +16,28 @@
     </div>
   </header>
    
-
+  <section class="top-nav">
+    <div>
+        <p> Braiton Mendoza</p>
+    </div>
+    <input id="menu-toggle" type="checkbox">
+    <label class="menu-button-container" for="menu-toggle">
+    <div class="menu-button"></div>  
+    </label>
+    <ul class="menu">
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#officers">ITSA Officers</a>
+      <a href="#meetings">Meetings Information</a>
+      <a href="#officers">Image Gallery</a>
+    </ul>
+</section>
  <nav>
   <a href="#">Home</a>
   <a href="#">About</a>
-  <a href="#">Services</a>
-  <a href="#">Contact</a>
   <a href="#officers">ITSA Officers</a>
   <a href="#meetings">Meetings Information</a>
-<a href="#officers">Image Gallery</a>
+  <a href="#officers">Image Gallery</a>
     </nav>
 
   <section class="hero">
