--- a/project/webpages/homepage.html
+++ b/project/webpages/homepage.html
@@ -16,7 +16,7 @@
     </div>
   </header>
    
-  <section class="top-nav">
+  <section class="menu">
     <input id="menu-toggle" type="checkbox">
     <label class="menu-button-container" for="menu-toggle">
     <div class="menu-button"></div>  
