--- a/project/webpages/homepage.html
+++ b/project/webpages/homepage.html
@@ -16,7 +16,10 @@
     </div>
   </header>
    
-
+  <!-- Hamburger Menu Button -->
+  <div class="hamburger" onclick="toggleMenu()">
+    &#9776;
+  </div>
  <nav>
   <a href="#">Home</a>
   <a href="#">About</a>
