--- a/project/webpages/homepage.html
+++ b/project/webpages/homepage.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="/project/styles/homepage.css">
 </head>
 <body>
+    <a href="https://www.shsu.edu/" target="_blank" class="floating-logo">
+      <img src="/project/images/SH_orange.png" alt="Website Logo" height="80" width="80">
+    </a>
    <header>
     <h1>Sam Houston State University</h1>
     <h2>Official page for the ITSA</h2>
        <div class="header-container">
-     <a href="https://www.shsu.edu/" target="_blank">
-    <img src="/project/images/SH_orange.png" alt="Website Logo" height="80" width="80" class="logo">
     </div>
   </header>
    
