--- a/project/webpages/homepage.html
+++ b/project/webpages/homepage.html
@@ -17,19 +17,19 @@
     </div>
   </header>
    
-  <!-- Hamburger Menu Button -->
-  <div class="hamburger" onclick="toggleMenu()">
-    &#9776;
-  </div>
- <nav>
-  <a href="#">Home</a>
-  <a href="#">About</a>
-  <a href="#">Services</a>
-  <a href="#">Contact</a>
-  <a href="#officers">ITSA Officers</a>
-  <a href="#meetings">Meetings Information</a>
-<a href="#officers">Image Gallery</a>
-    </nav>
+  <!-- Hamburger Menu Without JavaScript -->
+  <input type="checkbox" id="menu-toggle" class="menu-toggle" />
+  <label for="menu-toggle" class="hamburger">&#9776;</label>
+
+  <nav class="nav-menu">
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Services</a>
+    <a href="#">Contact</a>
+    <a href="#officers">ITSA Officers</a>
+    <a href="#meetings">Meetings Information</a>
+    <a href="#gallery">Image Gallery</a>
+  </nav>
 
   <section class="hero">
     <h1>Welcome to the ITSA</h1>
