--- a/project/webpages/homepage.html
+++ b/project/webpages/homepage.html
@@ -24,10 +24,8 @@
   <nav class="nav-menu">
     <a href="#">Home</a>
     <a href="#">About</a>
-    <a href="#">Services</a>
-    <a href="#">Contact</a>
     <a href="#officers">ITSA Officers</a>
-    <a href="#meetings">Meetings Information</a>
+    <a href="#meetings">ITSA Meetings</a>
     <a href="#gallery">Image Gallery</a>
   </nav>
 
