--- a/project/webpages/homepage.html
+++ b/project/webpages/homepage.html
@@ -36,37 +36,37 @@
   <div>
     <section class="content">
       <h2>About This Site</h2>
-      <p>This is a simple homepage built with HTML and CSS. You can customize it however you like. Add more sections, tweak the layout, or connect it with a backend for dynamic content.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum soluta at nemo molestias, magni sed temporibus minima saepe id dolor.</p>
     </section>
   </div>
   <div>
     <section class="content">
       <h2>About This Site</h2>
-      <p>This is a simple homepage built with HTML and CSS. You can customize it however you like. Add more sections, tweak the layout, or connect it with a backend for dynamic content.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit tempora pariatur totam ipsum expedita amet inventore explicabo soluta ea maiores?</p>
     </section>
   </div>
   <div>
     <section class="content">
       <h2>About This Site</h2>
-      <p>This is a simple homepage built with HTML and CSS. You can customize it however you like. Add more sections, tweak the layout, or connect it with a backend for dynamic content.</p>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam sint explicabo id sed earum vel pariatur saepe similique fugit eveniet?</p>
     </section>
   </div>
   <div>
     <section class="content">
       <h2>About This Site</h2>
-      <p>This is a simple homepage built with HTML and CSS. You can customize it however you like. Add more sections, tweak the layout, or connect it with a backend for dynamic content.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio vero molestiae dolor quisquam possimus ipsam eum eius quas deserunt aspernatur!</p>
     </section>
   </div>
   <div>
     <section class="content">
       <h2>About This Site</h2>
-      <p>This is a simple homepage built with HTML and CSS. You can customize it however you like. Add more sections, tweak the layout, or connect it with a backend for dynamic content.</p>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem consequuntur reiciendis quia ut repellendus, sed sapiente doloribus obcaecati distinctio vero!</p>
     </section>
   </div>
   <div>
     <section class="content">
       <h2>About This Site</h2>
-      <p>This is a simple homepage built with HTML and CSS. You can customize it however you like. Add more sections, tweak the layout, or connect it with a backend for dynamic content.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus laudantium corrupti eum animi totam distinctio natus, est ratione iste consectetur.</p>
     </section>
   </div>
 
