new website change

--- a/project/webpages/homepage.html
+++ b/project/webpages/homepage.html
@@ -30,45 +30,42 @@
   </nav>
 
   <section class="hero">
-    <h1>Welcome to the ITSA</h1>
+    <div class="hero-overlay">
+      <h1>Welcome to the ITSA</h1>
+    </div>
   </section>
 
-  <div>
-    <section class="content">
-      <h2>About This Site</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum soluta at nemo molestias, magni sed temporibus minima saepe id dolor.</p>
-    </section>
-  </div>
-  <div>
-    <section class="content">
-      <h2>About This Site</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit tempora pariatur totam ipsum expedita amet inventore explicabo soluta ea maiores?</p>
-    </section>
-  </div>
-  <div>
-    <section class="content">
-      <h2>About This Site</h2>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam sint explicabo id sed earum vel pariatur saepe similique fugit eveniet?</p>
-    </section>
-  </div>
-  <div>
-    <section class="content">
-      <h2>About This Site</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio vero molestiae dolor quisquam possimus ipsam eum eius quas deserunt aspernatur!</p>
-    </section>
-  </div>
-  <div>
-    <section class="content">
-      <h2>About This Site</h2>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem consequuntur reiciendis quia ut repellendus, sed sapiente doloribus obcaecati distinctio vero!</p>
-    </section>
-  </div>
-  <div>
-    <section class="content">
-      <h2>About This Site</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus laudantium corrupti eum animi totam distinctio natus, est ratione iste consectetur.</p>
-    </section>
-  </div>
+  <section class="content-grid">
+  <article class="card">
+    <h2>Who We Are</h2>
+    <p>The Information Technology Student Association (ITSA) is a community of SHSU students passionate about tech, leadership, and collaboration.</p>
+  </article>
+
+  <article class="card">
+    <h2>Our Mission</h2>
+    <p>We aim to empower students through tech-focused events, workshops, and mentorship to help build their future careers in IT and related fields.</p>
+  </article>
+
+  <article class="card">
+    <h2>Events & Workshops</h2>
+    <p>From coding bootcamps to career panels, we host a variety of events each semester to help you grow your skills and network.</p>
+  </article>
+
+  <article class="card">
+    <h2>Officer Team</h2>
+    <p>Meet the dedicated students leading our organization — planning events, coordinating with faculty, and helping the ITSA grow every year.</p>
+  </article>
+
+  <article class="card">
+    <h2>Join Us</h2>
+    <p>All SHSU students are welcome! Whether you're studying IT or just tech-curious, there's a place for you here. No experience needed.</p>
+  </article>
+
+  <article class="card">
+    <h2>Stay Connected</h2>
+    <p>Follow us on social media or subscribe to our newsletter to stay updated on everything ITSA is doing this semester.</p>
+  </article>
+</section>
 
   <footer>
     <p>&copy; 2025 ITSA | Sam Houston State University. All rights reserved.</p>
