--- a/project/webpages/homepage.html
+++ b/project/webpages/homepage.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <a href="https://www.shsu.edu/" target="_blank" class="floating-logo">
-      <img src="/project/images/sh logo.jpg" alt="Website Logo" height="80" width="80">
+      <img src="/project/images/newlogo.png" alt="Website Logo" height="80" width="80">
     </a>
    <header>
     <h1>Sam Houston State University</h1>
