--- a/project/webpages/homepage.html
+++ b/project/webpages/homepage.html
@@ -23,7 +23,7 @@
 
   <nav class="nav-menu">
     <a href="#">Home</a>
-    <a href="#">About</a>
+    <a href="/project/webpages/about.html">About</a>
     <a href="#officers">ITSA Officers</a>
     <a href="#meetings">ITSA Meetings</a>
     <a href="#gallery">Image Gallery</a>
