--- a/project/webpages/homepage.html
+++ b/project/webpages/homepage.html
@@ -24,9 +24,9 @@
   <nav class="nav-menu">
     <a href="#">Home</a>
     <a href="/project/webpages/about.html">About</a>
-    <a href="#officers">ITSA Officers</a>
-    <a href="#meetings">ITSA Meetings</a>
-    <a href="#gallery">Image Gallery</a>
+    <a href="/project/webpages/officers.html">ITSA Officers</a>
+    <a href="/project/webpages/meetings.html">ITSA Meetings</a>
+    <a href="/project/webpages/imagegallery.html">Image Gallery</a>
   </nav>
 
   <section class="hero">
