--- a/project/webpages/officers.html
+++ b/project/webpages/officers.html
@@ -12,7 +12,7 @@
     </a>
    <header>
     <h1>Sam Houston State University</h1>
-    <h2>About Page Placeholder</h2>
+    <h2>Officers Page Placeholder</h2>
        <div class="header-container">
     </div>
   </header>
