--- a/project/webpages/homepage.html
+++ b/project/webpages/homepage.html
@@ -22,7 +22,7 @@
   <label for="menu-toggle" class="hamburger">&#9776;</label>
 
   <nav class="nav-menu">
-    <a href="#">Home</a>
+    <a href="/project/webpages/homepage.html">Home</a>
     <a href="/project/webpages/about.html">About</a>
     <a href="/project/webpages/officers.html">ITSA Officers</a>
     <a href="/project/webpages/meetings.html">ITSA Meetings</a>
