--- a/project/webpages/imagegallery.html
+++ b/project/webpages/imagegallery.html
@@ -26,7 +26,7 @@
     <a href="/project/webpages/about.html">About</a>
     <a href="/project/webpages/officers.html">ITSA Officers</a>
     <a href="/project/webpages/meetings.html">ITSA Meetings</a>
-    <a href="#">Image Gallery</a>
+    <a href="/project/webpages/imagegallery.html">Image Gallery</a>
   </nav>
 
   <section>
