--- a/project/webpages/officers.html
+++ b/project/webpages/officers.html
@@ -24,7 +24,7 @@
   <nav class="nav-menu">
     <a href="/project/webpages/homepage.html">Home</a>
     <a href="/project/webpages/about.html">About</a>
-    <a href="#">ITSA Officers</a>
+    <a href="/project/webpages/officers.html">ITSA Officers</a>
     <a href="/project/webpages/meetings.html">ITSA Meetings</a>
     <a href="/project/webpages/imagegallery.html">Image Gallery</a>
   </nav>
