--- a/project/webpages/meetings.html
+++ b/project/webpages/meetings.html
@@ -25,7 +25,7 @@
     <a href="/project/webpages/homepage.html">Home</a>
     <a href="/project/webpages/about.html">About</a>
     <a href="/project/webpages/officers.html">ITSA Officers</a>
-    <a href="#">ITSA Meetings</a>
+    <a href="/project/webpages/meetings.html">ITSA Meetings</a>
     <a href="/project/webpages/imagegallery.html">Image Gallery</a>
   </nav>
 
