--- a/quiz8.html
+++ b/quiz8.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form</title>
-    <link rel="stylesheet" href="styles/quiz7.css">
+    <link rel="stylesheet" href="/styles/quiz8.css">
 </head>
 <body>
     <form action="register_account.html" method="post" id="registration_form">
