--- a/quiz8.html
+++ b/quiz8.html
@@ -92,10 +92,8 @@
             </label>
         </fieldset>
         <fieldset>
-            <label for="comments">Comments</label>
-            <textarea id="comments" name="comments"
-                   placeholder="If you have any comments, please enter them here.">
-            </textarea>
+            <legend>Comments</legend>
+            <textarea id="comments" name="comments" placeholder="If you have any comments, please enter them here."></textarea>
         </fieldset>
         <fieldset>
             <legend>Submit Your Membership</legend>
