--- a/project/webpages/homepage.html
+++ b/project/webpages/homepage.html
@@ -28,43 +28,53 @@
     <a href="/project/webpages/meetings.html">ITSA Meetings</a>
     <a href="/project/webpages/imagegallery.html">Image Gallery</a>
   </nav>
-
+  
   <section class="hero">
     <div class="hero-overlay">
       <h1>Welcome to the ITSA</h1>
     </div>
   </section>
 
+  <a href="https://bm2963.github.io/project/webpages/about.html" class="card-link"></a>
   <section class="content-grid">
   <article class="card">
     <h2>Who We Are</h2>
     <p>The Information Technology Student Association (ITSA) is a community of SHSU students passionate about tech, leadership, and collaboration.</p>
   </article>
-
+  </a>
+  <a href="https://bm2963.github.io/project/webpages/about.html" class="card-link"></a>
   <article class="card">
     <h2>Our Mission</h2>
     <p>We aim to empower students through tech-focused events, workshops, and mentorship to help build their future careers in IT and related fields.</p>
   </article>
-
+  </a>
+  <a href="https://www.chick-fil-a.com" class="card-link"></a>
   <article class="card">
     <h2>Events & Workshops</h2>
     <p>From coding bootcamps to career panels, we host a variety of events each semester to help you grow your skills and network.</p>
   </article>
+  </a>
 
+  <a href="https://bm2963.github.io/project/webpages/officers.html" class="card-link">
   <article class="card">
     <h2>Officer Team</h2>
     <p>Meet the dedicated students leading our organization — planning events, coordinating with faculty, and helping the ITSA grow every year.</p>
   </article>
+  </a>
 
+  <a href="https://www.chick-fil-a.com" class="card-link">
   <article class="card">
     <h2>Join Us</h2>
     <p>All SHSU students are welcome! Whether you're studying IT or just tech-curious, there's a place for you here. No experience needed.</p>
   </article>
+  </a>
 
+  <a href="https://www.allegiantair.com/" class="card-link">
   <article class="card">
     <h2>Stay Connected</h2>
     <p>Follow us on social media or subscribe to our newsletter to stay updated on everything ITSA is doing this semester.</p>
   </article>
+  </a>
 </section>
 
   <footer>
