--- a/project/webpages/homepage.html
+++ b/project/webpages/homepage.html
@@ -35,14 +35,14 @@
     </div>
   </section>
 
-  <a href="https://bm2963.github.io/project/webpages/about.html" class="card-link"></a>
+  <a href="https://bm2963.github.io/project/webpages/about.html" class="card-link">
   <section class="content-grid">
   <article class="card">
     <h2>Who We Are</h2>
     <p>The Information Technology Student Association (ITSA) is a community of SHSU students passionate about tech, leadership, and collaboration.</p>
   </article>
   </a>
-  <a href="https://bm2963.github.io/project/webpages/about.html" class="card-link"></a>
+  <a href="https://bm2963.github.io/project/webpages/about.html" class="card-link">
   <article class="card">
     <h2>Our Mission</h2>
     <p>We aim to empower students through tech-focused events, workshops, and mentorship to help build their future careers in IT and related fields.</p>
