--- a/project/webpages/homepage.html
+++ b/project/webpages/homepage.html
@@ -48,7 +48,7 @@
     <p>We aim to empower students through tech-focused events, workshops, and mentorship to help build their future careers in IT and related fields.</p>
   </article>
   </a>
-  <a href="https://www.chick-fil-a.com" class="card-link">
+  <a href="https://bm2963.github.io/project/webpages/imagegallery.html" class="card-link">
   <article class="card">
     <h2>Events & Workshops</h2>
     <p>From coding bootcamps to career panels, we host a variety of events each semester to help you grow your skills and network.</p>
