--- a/project/webpages/homepage.html
+++ b/project/webpages/homepage.html
@@ -62,10 +62,10 @@
   </article>
   </a>
 
-  <a href="https://www.chick-fil-a.com" class="card-link">
+  <a href="https://shsu.campuslabs.com/engage/organization/itsa" class="card-link">
   <article class="card">
     <h2>Join Us</h2>
-    <p>All SHSU students are welcome! Whether you're studying IT or just tech-curious, there's a place for you here. No experience needed.</p>
+    <p>Click here to join! Create an account in Org Link and simply search for Information technology Student association to join.</p>
   </article>
   </a>
 
