--- a/project/webpages/homepagetest.html
+++ b/project/webpages/homepagetest.html
@@ -67,7 +67,7 @@
   </article>
   </a>
 
-  <a href="https://shsu.campuslabs.com/engage/organization/itsa" class="card-link">
+  <a href="https://shsu.campuslabs.com/engage/organization/itsa" target="_blank" class="card-link">
   <article class="card">
     <h2>Join Us</h2>
     <p>Click here to join! Create an account in Org Link and simply search for Information technology Student association to join.</p>
