--- a/project/webpages/homepage.html
+++ b/project/webpages/homepage.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ITSA Official Webpage</title>
-    <link rel="stylesheet" href="/project/styles/homepage.css">
+    <link rel="stylesheet" href="/project/styles/homepage copy.css">
 </head>
 <body>
     <a href="https://www.shsu.edu/" target="_blank" class="floating-logo">
@@ -17,17 +17,22 @@
     </div>
   </header>
    
-  <!-- Hamburger Menu Without JavaScript -->
-  <input type="checkbox" id="menu-toggle" class="menu-toggle" />
-  <label for="menu-toggle" class="hamburger">&#9776;</label>
-
-  <nav class="nav-menu">
-    <a href="/project/webpages/homepage.html">Home</a>
-    <a href="/project/webpages/about.html">About</a>
-    <a href="/project/webpages/officers.html">ITSA Officers</a>
-    <a href="/project/webpages/meetings.html">ITSA Meetings</a>
-    <a href="/project/webpages/imagegallery.html">Image Gallery</a>
-  </nav>
+  <section class="top-nav">
+    <div>
+        <p> ITSA</p>
+    </div>
+    <input id="menu-toggle" type="checkbox">
+    <label class="menu-button-container" for="menu-toggle">
+    <div class="menu-button"></div>  
+    </label>
+    <ul class="menu">
+        <li><a href="/project/webpages/homepagetest.html">Home</a></li>
+        <li><a href="/project/webpages/about.html">About</a></li>
+        <li><a href="/project/webpages/officers.html">ITSA Officers</a></li>
+        <li><a href="/project/webpages/meetings.html">ITSA Meetings</a></li>
+        <li><a href="/project/webpages/imagegallery.html">Image Gallery</a></li>
+    </ul>
+</section>
   
   <section class="hero">
     <div class="hero-overlay">
@@ -62,7 +67,7 @@
   </article>
   </a>
 
-  <a href="https://shsu.campuslabs.com/engage/organization/itsa" class="card-link">
+  <a href="https://shsu.campuslabs.com/engage/organization/itsa" target="_blank" class="card-link">
   <article class="card">
     <h2>Join Us</h2>
     <p>Click here to join! Create an account in Org Link and simply search for Information technology Student association to join.</p>
