--- a/project/webpages/imagegallery.html
+++ b/project/webpages/imagegallery.html
@@ -17,17 +17,22 @@
     </div>
   </header>
    
-  <!-- Hamburger Menu Without JavaScript -->
-  <input type="checkbox" id="menu-toggle" class="menu-toggle" />
-  <label for="menu-toggle" class="hamburger">&#9776;</label>
-
-  <nav class="nav-menu">
-    <a href="/project/webpages/homepage.html">Home</a>
-    <a href="/project/webpages/about.html">About</a>
-    <a href="/project/webpages/officers.html">ITSA Officers</a>
-    <a href="/project/webpages/meetings.html">ITSA Meetings</a>
-    <a href="/project/webpages/imagegallery.html">Image Gallery</a>
-  </nav>
+  <section class="top-nav">
+    <div>
+        <p> ITSA</p>
+    </div>
+    <input id="menu-toggle" type="checkbox">
+    <label class="menu-button-container" for="menu-toggle">
+    <div class="menu-button"></div>  
+    </label>
+    <ul class="menu">
+        <li><a href="/project/webpages/homepagetest.html">Home</a></li>
+        <li><a href="/project/webpages/about.html">About</a></li>
+        <li><a href="/project/webpages/officers.html">ITSA Officers</a></li>
+        <li><a href="/project/webpages/meetings.html">ITSA Meetings</a></li>
+        <li><a href="/project/webpages/imagegallery.html">Image Gallery</a></li>
+    </ul>
+</section>
 
   <section>
     <article>
