--- a/project/webpages/homepagetest.html
+++ b/project/webpages/homepagetest.html
@@ -130,7 +130,7 @@
   </section>
 
   <section class="events">
-    <h2>🗓 Upcoming Events</h2>
+    <h2>🗓 ITSA Upcoming Events Calendar</h2>
     <iframe src="https://calendar.google.com/calendar/embed?src=d6805ad1a782e4a6ae56e3ccd0005dc2adaf6f28733fca60b3f026489cfd21db%40group.calendar.google.com&ctz=America%2FLos_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
   </section>
 
