--- a/project/webpages/homepagetest.html
+++ b/project/webpages/homepagetest.html
@@ -94,6 +94,18 @@
       border: none;
       height: 600px;
     }
+
+    @media (max-width: 768px) {
+      .events iframe {
+        height: 500px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .events iframe {
+        height: 400px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -131,7 +143,7 @@
 
   <section class="events">
     <h2>🗓 ITSA Upcoming Events Calendar</h2>
-    <iframe src="https://calendar.google.com/calendar/embed?src=d6805ad1a782e4a6ae56e3ccd0005dc2adaf6f28733fca60b3f026489cfd21db%40group.calendar.google.com&ctz=America%2FLos_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+    <iframe src="https://calendar.google.com/calendar/embed?src=d6805ad1a782e4a6ae56e3ccd0005dc2adaf6f28733fca60b3f026489cfd21db%40group.calendar.google.com&ctz=America%2FLos_Angeles" style="border: 0" frameborder="0" scrolling="no"></iframe>
   </section>
 
   <section class="content-grid">
