--- a/project/webpages/homepagetest.html
+++ b/project/webpages/homepagetest.html
@@ -185,8 +185,14 @@
   </section>
 
   <div class="socials">
-    <a href="https://instagram.com/itsa_shsu" target="_blank">
-      <img src="/project/icons/instagram.png" alt="Instagram" />
+    <a href="https://instagram.com/" target="_blank">
+      <img src="/project/icons/instagram.png" alt="Instagram |" />
+    </a>
+    <a href="https://facebook.com/" target="_blank">
+      <img src="/project/icons/instagram.png" alt="Facebook |" />
+    </a>
+    <a href="https://www.shsu.edu.com/" target="_blank">
+      <img src="/project/icons/instagram.png" alt="SHSU Home" />
     </a>
     <!-- Add more icons as needed -->
   </div>
