--- a/project/webpages/homepagetest.html
+++ b/project/webpages/homepagetest.html
@@ -186,13 +186,13 @@
 
   <div class="socials">
     <a href="https://instagram.com/" target="_blank">
-      <img src="/project/icons/instagram.png" alt="Instagram |" />
+      <img src="/project/images/instagram logo.png" alt="Instagram" />
     </a>
     <a href="https://facebook.com/" target="_blank">
-      <img src="/project/icons/instagram.png" alt="Facebook |" />
+      <img src="/project/images/facebook logo.png" alt="Facebook" />
     </a>
     <a href="https://www.shsu.edu.com/" target="_blank">
-      <img src="/project/icons/instagram.png" alt="SHSU Home" />
+      <img src="/project/images/newlogo2.png" alt="SHSU Home" />
     </a>
     <!-- Add more icons as needed -->
   </div>
