--- a/project/webpages/homepagetest.html
+++ b/project/webpages/homepagetest.html
@@ -185,11 +185,11 @@
   </section>
 
   <div class="socials">
-    <a href="https://instagram.com/" target="_blank">
+    <a href="https://www.instagram.com/samhoustonstate/" target="_blank">
       <img src="/project/images/instagram logo.png" alt="Instagram" />
     </a>
     <br>
-    <a href="https://facebook.com/" target="_blank">
+    <a href="https://www.facebook.com/samhoustonstate" target="_blank">
       <img src="/project/images/facebook logo.png" alt="Facebook" />
     </a>
     <br>
